--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
     "firebase": "^9.0.2",
+    "serve-static": "^1.14.1",
     "vue": "^2.6.11",
     "vue-router": "^3.5.2"
   },
