--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "core-js": "^3.6.5",
     "express": "^4.17.1",
     "firebase": "^9.0.2",
+    "firebase-admin": "^9.12.0",
+    "firebase-functions": "^3.15.7",
     "serve-static": "^1.14.1",
     "vue": "^2.6.11",
     "vue-router": "^3.5.2"
