--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "axios": "^0.22.0",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase": "^9.0.2",
     "firebase-admin": "^9.12.0",
     "firebase-functions": "^3.15.7",
+    "multer": "^1.4.3",
     "serve-static": "^1.14.1",
     "vue": "^2.6.11",
     "vue-router": "^3.5.2"
